--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,8 +9,7 @@ license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph>=0.2.6",
-    "python-dotenv>=1.0.1",
-    "browser-use (>=0.1.27,<0.2.0)",
+    "python-dotenv>=1.0.1"
 ]
 
 
