--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,8 @@ license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph>=0.2.6",
-    "python-dotenv>=1.0.1"
+    "python-dotenv>=1.0.1",
+    "langchain-openai (>=0.3.4,<0.4.0)"
 ]
 
 
