--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,30 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@assistant-ui/react": "^0.7.46",
-    "@assistant-ui/react-langgraph": "^0.2.2",
-    "@assistant-ui/react-markdown": "^0.7.11",
-    "@langchain/langgraph-sdk": "^0.0.36",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@assistant-ui/react": "^0.9.5",
+    "@assistant-ui/react-langgraph": "^0.4.4",
+    "@assistant-ui/react-markdown": "^0.9.2",
+    "@langchain/langgraph-sdk": "^0.0.68",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.473.0",
-    "next": "^15.1.6",
+    "lucide-react": "^0.501.0",
+    "next": "^15.3.1",
     "react": "^19",
     "react-dom": "^19",
-    "tailwind-merge": "^2.6.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "15.3.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+  "packageManager": "pnpm@10.8.1"
 }
