修复前端和后端错误，完善Docker开发环境
- 修复前端 TooltipIconButton 组件导入错误，使用标准 button 替代
- 修复后端图定义中的节点名称问题，清理空格并修正路由
- 安装 langgraph-cli[inmem] 包支持 LangGraph CLI 命令
- 使用 langgraph dev 命令启动后端服务
- 统一环境变量配置到根目录
- 添加完整的 Docker Compose 开发环境
- 添加国内镜像加速配置
- 完善项目文档和脚本

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,12 +5,15 @@ description = "Starter template for making a new agent LangGraph."
 authors = [
     { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
 ]
-license = { text = "MIT" }
+license = "MIT"
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph>=0.2.6",
+    "langgraph-cli[inmem]>=0.1.0",
     "python-dotenv>=1.0.1",
-    "langchain-openai (>=0.3.4,<0.4.0)"
+    "langchain-openai (>=0.3.4,<0.4.0)",
+    "uvicorn>=0.24.0",
+    "fastapi>=0.104.0"
 ]
 
 
